src/test/deca/codegen/valid/test_init_fieldOb.deca
// Description:
//    test initialisation field dans une classe
//
// Resultats:
//  0
//
//
// Historique:
//    cree le 23/01/2017

class A{
  }
{
A test;
if (test == null){
print("ok");
}

}
